--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -78,6 +78,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_password"
+                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:text="@={viewmodel.password}"
                 android:layout_height="wrap_content"
